--- a/semana10.html
+++ b/semana10.html
@@ -166,7 +166,7 @@ La paciente comentó que sentía comodidad pero seguía surgiendo una leve caíd
                                 <video src="video.mp4" autoplay muted loop></video>
 				<!-- End Sample Area -->
 			<!-- Start Sample Area -->
-				 <div class="col-md-9 mt-sm-10 left-align-p">
+				  <div class="col-md-9 mt-sm-10 left-align-p">
 								<p>La paciente comentó que sentía comodidad pero seguía surgiendo una leve caída del pie y la marcha mejoró a una mínimo de lo esperado, por el cual concluimos la falta de soporte del pie para mantenerlo a 90°.</p>
 					<!-- End Sample Area -->
 						<!-- Start Sample Area -->
@@ -191,14 +191,16 @@ La paciente comentó que sentía comodidad pero seguía surgiendo una leve caíd
 						</div>
 						<!-- End Sample Area -->
 						<!-- Start Sample Area -->
-								<div class="section-top-center">
+					<div class="section-top-center">
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-								<a href="img/elements/cuadropla1.PNG" width="300" height="300" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/cuadropla1.PNG);"></div></a>
-						          </div>
-							</div>
+							<img src="img/elements/zz.PNG" alt="" class="png-fluid">
+					
+								</div> 
 						</div>
+				    </div>
+						
 						<!-- End Sample Area -->
 						<!-- Start Sample Area -->
 						<div class="col-md-9 mt-sm-10 left-align-p">
