--- a/semana10.html
+++ b/semana10.html
@@ -174,6 +174,7 @@ La paciente comentó que sentía comodidad pero seguía surgiendo una leve caíd
 				<div class="about-content col-lg-12">
 						<h2 class="mb-30">DESARROLLO DE UN SOPORTE </h2>
 							</div>
+				</section>
 				<!-- End Sample Area -->
 						<!-- Start Sample Area -->
 				 <div class="col-md-9 mt-sm-10 left-align-p">
