--- a/semana10.html
+++ b/semana10.html
@@ -113,6 +113,7 @@
 				<div class="about-content col-lg-12">
 						<h2 class="mb-30">INTEGRACION DE LOS VELCROS</h2>
 							</div>
+				</section>
 					<!-- End Sample Area -->
 			<!-- Start Sample Area -->
 				 <section class="row d-flex align-items-center justify-content-center">
@@ -137,6 +138,7 @@
 				<div class="about-content col-lg-12">
 						<h2 class="mb-30">EVALUACIÓN DE RESISTENCIA</h2>
 							</div>
+						</section>
 					<!-- End Sample Area -->
 					<!-- Start Sample Area -->
 				 <div class="col-md-9 mt-sm-10 left-align-p">
@@ -160,6 +162,7 @@ La paciente comentó que sentía comodidad pero seguía surgiendo una leve caíd
 				<div class="about-content col-lg-12">
 						<h3 class="mb-30">Video de la marcha del paciente con la AFO impresa en 3D:</h3>
 							</div>
+			</section>
 				<!-- End Sample Area -->
 			<!-- Start Sample Area -->
 				<video src="img/elements/video1.mp4" poster="video1.mp4" controls></video>
@@ -179,7 +182,7 @@ La paciente comentó que sentía comodidad pero seguía surgiendo una leve caíd
 				<!-- End Sample Area -->
 						<!-- Start Sample Area -->
 				<section class="row d-flex align-items-center justify-content-center">
-				 <div class="col-md-9 mt-sm-10 center-align-p">
+				 <div class="col-md-5 mt-sm-20 center-align-p">
 								<p>Con la ortesis obtenida impreso con flexfil se realizo una prueba objetiva en el usuario y observamos que la ortesis no era capaz de mantener el pie en 90 y al momento de caminar se deformaba de tal manera que no mantenia estabilidad en el tobillo .Debido a estos resultados adversos obtenidos  tomamos  como referencia el modelado de la ortesis  hecha de flexfil delimitando la mitad inferior para modelar un soporte rigido que cubra la planta (arco longitudinal) y la parte superior del tobillo,ya que en estas zonas cae el peso del usuario.Además debido a cuestiones de tiempo el soporte rigido se diseno utilizando la tecnica voronoi.Finalmente se pocedio a imprimir el soporte rigido en filamento PLA.</p>
 					 
 				<!-- End Sample Area -->
