--- a/semana10.html
+++ b/semana10.html
@@ -182,10 +182,9 @@ La paciente comentó que sentía comodidad pero seguía surgiendo una leve caíd
 				<!-- End Sample Area -->
 						<!-- Start Sample Area -->
 				<section class="row d-flex align-items-center justify-content-center">
-				 <div class="col-md-20 mt-sm-10 center-align-p">
-								<p>Con la ortesis obtenida impreso con flexfil se realizo una prueba objetiva en el usuario y observamos que la ortesis no era capaz de mantener el pie en 90 y al momento de caminar se deformaba de tal manera que no mantenia estabilidad en el tobillo .Debido a estos resultados adversos obtenidos  tomamos  como referencia el modelado de la ortesis  hecha de flexfil delimitando la mitad inferior para modelar un soporte rigido que cubra la planta (arco longitudinal) y la parte superior del tobillo,ya que en estas zonas cae el peso del usuario.Además debido a cuestiones de tiempo el soporte rigido se diseno utilizando la tecnica voronoi.Finalmente se pocedio a imprimir el soporte rigido en filamento PLA.</p>
-					 
-				<!-- End Sample Area -->
+				 <div class="col-md-9 mt-sm-10 center-align-p">
+			       <p>Con la ortesis obtenida impreso con flexfil se realizo una prueba objetiva en el usuario y observamos que la ortesis no era capaz de mantener el pie en 90 y al momento de caminar se deformaba de tal manera que no mantenia estabilidad en el tobillo .Debido a estos resultados adversos obtenidos  tomamos  como referencia el modelado de la ortesis  hecha de flexfil delimitando la mitad inferior para modelar un soporte rigido que cubra la planta (arco longitudinal) y la parte superior del tobillo,ya que en estas zonas cae el peso del usuario.Además debido a cuestiones de tiempo el soporte rigido se diseno utilizando la tecnica voronoi.Finalmente se pocedio a imprimir el soporte rigido en filamento PLA.</p>
+			       <!-- End Sample Area -->
 						<!-- Start Sample Area -->
 				<div class="section-top-center">
 					<div style="text-align:center">
@@ -197,9 +196,9 @@ La paciente comentó que sentía comodidad pero seguía surgiendo una leve caíd
 						</div>
 						<!-- End Sample Area -->
 						<!-- Start Sample Area -->
-					<div class="section-top-center">
-					<div style="text-align:center">
-						<div class="row gallery-item  justify-content-center">
+					<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
 							<div class="col-md-4">
 							<img src="img/elements/zz.PNG" alt="" class="png-fluid">
 					
